--- a/3/A5/index.html
+++ b/3/A5/index.html
@@ -16,8 +16,9 @@
                 <article class="notice-classification imp">
                     중요
                 </article>
-                <main class="notice-title">
-                    2026년 WorldSkills 대회 일정 안내 </main>
+                <div class="notice-title">
+                    2026년 WorldSkills 대회 일정 안내
+                </div>
             </header>
             <footer class="notice-date">
                 2026-01-15
