--- a/3/A5/index.html
+++ b/3/A5/index.html
@@ -24,6 +24,58 @@
                 2026-01-15
             </footer>
         </div>
+        <div class="notice">
+            <header class="notice-header">
+                <article class="notice-classification inf">
+                    공지
+                </article>
+                <div class="notice-title">
+                    웹디자인 기술대회 참가신청 마감
+                </div>
+            </header>
+            <footer class="notice-date">
+                2026-01-10
+            </footer>
+        </div>
+        <div class="notice">
+            <header class="notice-header">
+                <article class="notice-classification inf">
+                    안내
+                </article>
+                <div class="notice-title">
+                    온라인 교육과정 개설 안내
+                </div>
+            </header>
+            <footer class="notice-date">
+                2026-01-08
+            </footer>
+        </div>
+        <div class="notice">
+            <header class="notice-header">
+                <article class="notice-classification inf">
+                    공지
+                </article>
+                <div class="notice-title">
+                    2026년 1분기 교육일정 발표
+                </div>
+            </header>
+            <footer class="notice-date">
+                2026-01-05
+            </footer>
+        </div>
+        <div class="notice">
+            <header class="notice-header">
+                <article class="notice-classification inf">
+                    안내
+                </article>
+                <div class="notice-title">
+                    홈페이지 점검 일정 안내
+                </div>
+            </header>
+            <footer class="notice-date">
+                2026-01-03
+            </footer>
+        </div>
     </section>
 </body>
 
