기능반 특강

--- a/기능반 특강/20260117/example01.html
+++ b/기능반 특강/20260117/example01.html
@@ -12,7 +12,8 @@
     <!--<script> </script>-->
 
     <!--외부 파일 연결하는 케이스-->
-    <script src="app.js"></script>
+    <!--<script src="stringexample.js"></script>-->
+    <script src="arrayexample.js"></script>
 
 
 </body>
