--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer></footer>
+    <footer>
+        <div class="top-footer"></div>
+        <div class="bot-footer"></div>
+    </footer>
 </body>
 </html>
