--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <footer>
-        <div class="top-footer"></div>
+        <div class="top-footer">
+            <div class="top-footer-title">
+                <p class="title">
+                    WorldSkills Korea
+                </p>
+                <p class="subscription">
+                    세계기능올림픽대회를 통해 기능인재 양성과 <br>기능의 우수성을 널리 알리고 있습니다.
+                </p>
+            </div>
+        </div>
         <div class="bot-footer"></div>
     </footer>
 </body>
+
 </html>
