--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -20,7 +20,12 @@
                 </p>
             </div>
         </div>
-        <div class="bot-footer"></div>
+        <div class="bot-footer">
+            <p class="bot-left">
+                주소: 서울특별시 강남구 테헤란로 123 WorldSkills 빌딩 <br>
+                전화: 02-1234-5678 | 이메일: info@worldskills.kr
+            </p>
+        </div>
     </footer>
 </body>
 
