--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <footer>
-        <div class="top-footer">
+        <section class="top-footer">
             <div class="top-footer-title">
                 <p class="title">
                     WorldSkills Korea
@@ -19,11 +19,15 @@
                     세계기능올림픽대회를 통해 기능인재 양성과 <br>기능의 우수성을 널리 알리고 있습니다.
                 </p>
             </div>
-        </div>
+            div.
+        </section>
         <div class="bot-footer">
             <p class="bot-left">
                 주소: 서울특별시 강남구 테헤란로 123 WorldSkills 빌딩 <br>
                 전화: 02-1234-5678 | 이메일: info@worldskills.kr
+            </p>
+            <p class="bot-right">
+                © 2026 WorldSkills Korea. All rights reserved.
             </p>
         </div>
     </footer>
