--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -19,7 +19,16 @@
                     세계기능올림픽대회를 통해 기능인재 양성과 <br>기능의 우수성을 널리 알리고 있습니다.
                 </p>
             </div>
-            div.
+            <div class="top-footer-sub">
+                <div class="shortcuts">
+                    <div class="shortscuts-title">바로가기</div>
+                    <div class="shortcut">기능경기대회</div>
+                    <div class="shortcut">교육과정</div>
+                    <div class="shortcut">자료실</div>
+                    <div class="shortcut">공지사항</div>
+                </div>
+                <div class="supports"></div>
+            </div>
         </section>
         <div class="bot-footer">
             <p class="bot-left">
