others/ add css shortcuts

--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -27,7 +27,9 @@
                     <div class="shortcut">자료실</div>
                     <div class="shortcut">공지사항</div>
                 </div>
-                <div class="supports"></div>
+                <div class="supports">
+                    <div class="sup-title">고객지원</div>
+                </div>
             </div>
         </section>
         <div class="bot-footer">
