--- a/3/A6/index.html
+++ b/3/A6/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="top-footer-sub">
                 <div class="shortcuts">
-                    <div class="shortscuts-title">바로가기</div>
+                    <div class="shortcuts-title">바로가기</div>
                     <div class="shortcut">기능경기대회</div>
                     <div class="shortcut">교육과정</div>
                     <div class="shortcut">자료실</div>
@@ -29,6 +29,10 @@
                 </div>
                 <div class="supports">
                     <div class="sup-title">고객지원</div>
+                    <div class="support">FAQ</div>
+                    <div class="support">1:1 문의</div>
+                    <div class="support">이용약관</div>
+                    <div class="support">개인정보처리방침</div>
                 </div>
             </div>
         </section>
