--- a/3/A7/index.html
+++ b/3/A7/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+    <p class="title">
+        우리의 서비스
+    </p>
+    <section class="services">
+        <article class="service"></article>
+    </section>
 </body>
 
 </html>
