--- a/3/A7/index.html
+++ b/3/A7/index.html
@@ -9,11 +9,18 @@
 </head>
 
 <body>
-    <p class="title">
-        우리의 서비스
-    </p>
-    <section class="services">
-        <article class="service"></article>
+    <section class="service-contents">
+        <p class="title">
+            우리의 서비스
+        </p>
+        <section class="services">
+            <article class="service">
+                <p class="service-icon">🏆</p>
+                <p class="service-title">기능경기대회</p>
+                <p class="service-subtitle">국내외 기능경기대회를 통해 기능인재를 발굴하고 우수한 기능의 가치를 널리 알리고 있습니다.</p>
+                <div class="service-button">자세히 보기</div>
+            </article>
+        </section>
     </section>
 </body>
 
