--- a/3/A7/index.html
+++ b/3/A7/index.html
@@ -20,6 +20,36 @@
                 <p class="service-sub">국내외 기능경기대회를 통해 기능인재를 발굴하고 우수한 기능의 가치를 널리 알리고 있습니다.</p>
                 <div class="service-button">자세히 보기</div>
             </article>
+            <article class="service">
+                <p class="service-icon">📚</p>
+                <p class="service-title">교육과정</p>
+                <p class="service-sub">체계적인 교육과정을 통해 실무능력을 갖춘 전문기능인을 양성하고 있습니다.</p>
+                <div class="service-button">자세히 보기</div>
+            </article>
+            <article class="service">
+                <p class="service-icon">🤝</p>
+                <p class="service-title">국제교류</p>
+                <p class="service-sub">세계 각국과의 기능교류를 통해 글로벌 기능인재 네트워크를 구축하고 있습니다.</p>
+                <div class="service-button">자세히 보기</div>
+            </article>
+            <article class="service">
+                <p class="service-icon">🎯</p>
+                <p class="service-title">진로지원</p>
+                <p class="service-sub">기능인들의 성공적인 진로개발과 취업지원을 위한 다양한 프로그램을 운영합니다.</p>
+                <div class="service-button">자세히 보기</div>
+            </article>
+            <article class="service">
+                <p class="service-icon">🔧</p>
+                <p class="service-title">기술혁신</p>
+                <p class="service-sub">4차 산업혁명 시대에 맞는 첨단기술 교육과 혁신적인 기능개발을 지원합니다.</p>
+                <div class="service-button">자세히 보기</div>
+            </article>
+            <article class="service">
+                <p class="service-icon">💡</p>
+                <p class="service-title">연구개발</p>
+                <p class="service-sub">기능분야의 지속적인 연구를 통해 새로운 기술과 교육방법을 개발하고 있습니다.</p>
+                <div class="service-button">자세히 보기</div>
+            </article>
         </section>
     </section>
 </body>
