--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    
+    <section class="cart-contents">
+        <div class="cart-header"></div>
+        <div class="cart-contents"></div>
+        <div class="cart-payment"></div>
+        <div class="cart-footer"></div>
+    </section>
 </body>
 
 </html>
