--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -10,8 +10,24 @@
 
 <body>
     <section class="cart-contents">
-        <div class="cart-header"></div>
-        <div class="cart-contents"></div>
+        <div class="cart-header">장바구니</div>
+        <div class="cart-contents">
+            <div class="cart-content">
+                <div class="cart-content-header">
+                    <img src="images/tshirt.jpg" alt="">
+                    <p class="cart-content-title">
+                        WorldSkills 공식 티셔츠
+                    </p>
+                    <p class="cart-content-sub">
+                        색상: 네이비 <br>
+                        사이즈: L
+                    </p>
+                </div>
+                <div class="cart-content-footer">
+
+                </div>
+            </div>
+        </div>
         <div class="cart-payment"></div>
         <div class="cart-footer"></div>
     </section>
