--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -14,14 +14,16 @@
         <div class="cart-contents">
             <div class="cart-content">
                 <div class="cart-content-header">
-                    <img src="images/tshirt.jpg" alt="">
-                    <p class="cart-content-title">
-                        WorldSkills 공식 티셔츠
-                    </p>
-                    <p class="cart-content-sub">
-                        색상: 네이비 <br>
-                        사이즈: L
-                    </p>
+                    <img src="images/tshirt.jpg" alt="tshirt">
+                    <div>
+                        <p class="cart-content-title">
+                            WorldSkills 공식 티셔츠
+                        </p>
+                        <p class="cart-content-sub">
+                            색상: 네이비 <br>
+                            사이즈: L
+                        </p>
+                    </div>
                 </div>
                 <div class="cart-content-footer">
 
