--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -26,7 +26,11 @@
                     </div>
                 </div>
                 <div class="cart-content-footer">
-
+                    <span class="pm">-</span>2<span class="pm">+</span>
+                    <p class="cart-content-payment">
+                        25,000원
+                    </p>
+                    <div class="x-button">x</div>
                 </div>
             </div>
         </div>
