--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -26,7 +26,28 @@
                     </div>
                 </div>
                 <div class="cart-content-footer">
-                    <span class="pm">-</span>2<span class="pm">+</span>
+                    <span class="pm">-</span><span class="amount">2</span><span class="pm">+</span>
+                    <p class="cart-content-payment">
+                        25,000원
+                    </p>
+                    <div class="x-button">x</div>
+                </div>
+            </div>
+            <div class="cart-content">
+                <div class="cart-content-header">
+                    <img src="images/tshirt.jpg" alt="tshirt">
+                    <div>
+                        <p class="cart-content-title">
+                            WorldSkills 공식 티셔츠
+                        </p>
+                        <p class="cart-content-sub">
+                            색상: 네이비 <br>
+                            사이즈: L
+                        </p>
+                    </div>
+                </div>
+                <div class="cart-content-footer">
+                    <span class="pm">-</span><span class="amount">2</span><span class="pm">+</span>
                     <p class="cart-content-payment">
                         25,000원
                     </p>
