--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="cart-contents">
+    <section class="cart-contents-area">
         <div class="cart-header">장바구니</div>
         <div class="cart-contents">
             <div class="cart-content">
