--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -35,21 +35,21 @@
             </div>
             <div class="cart-content">
                 <div class="cart-content-header">
-                    <img src="images/tshirt.jpg" alt="tshirt">
+                    <img src="images/book.jpg" alt="tshirt">
                     <div>
                         <p class="cart-content-title">
-                            WorldSkills 공식 티셔츠
+                            기능경기 가이드북
                         </p>
                         <p class="cart-content-sub">
-                            색상: 네이비 <br>
-                            사이즈: L
+                            종류: 웹디자인 <br>
+                            2026년 최신판
                         </p>
                     </div>
                 </div>
                 <div class="cart-content-footer">
-                    <span class="pm">-</span><span class="amount">2</span><span class="pm">+</span>
+                    <span class="pm">-</span><span class="amount">1</span><span class="pm">+</span>
                     <p class="cart-content-payment">
-                        25,000원
+                        15,000원
                     </p>
                     <div class="x-button">x</div>
                 </div>
