--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -54,8 +54,34 @@
                     <div class="x-button">x</div>
                 </div>
             </div>
+            <div class="cart-content">
+                <div class="cart-content-header">
+                    <img src="images/book.jpg" alt="tshirt">
+                    <div>
+                        <p class="cart-content-title">
+                            WorldSkills 노트북 파우치
+                        </p>
+                        <p class="cart-content-sub">
+                            색상: 블랙 <br>
+                            15인치 호환
+                        </p>
+                    </div>
+                </div>
+                <div class="cart-content-footer">
+                    <span class="pm">-</span><span class="amount">1</span><span class="pm">+</span>
+                    <p class="cart-content-payment">
+                        35,000원
+                    </p>
+                    <div class="x-button">x</div>
+                </div>
+            </div>
         </div>
-        <div class="cart-payment"></div>
+        <div class="cart-payment">
+            <div class="payment-row">
+                <span class="pay-text">상품금액</span>
+                <span class="pay-text">75,000원</span>
+            </div>
+        </div>
         <div class="cart-footer"></div>
     </section>
 </body>
