--- a/3/A8/index.html
+++ b/3/A8/index.html
@@ -81,8 +81,19 @@
                 <span class="pay-text">상품금액</span>
                 <span class="pay-text">75,000원</span>
             </div>
+            <div class="payment-row">
+                <span class="pay-text">배송비</span>
+                <span class="pay-text">3,000원</span>
+            </div>
+            <div class="payment-row">
+                <span class="pay-text">총 결제금액</span>
+                <span class="pay-text">78,000원</span>
+            </div>
         </div>
-        <div class="cart-footer"></div>
+        <div class="cart-footer">
+            <div class="continue button">쇼핑 계속하기</div>
+            <div class="order button">주문하기</div>
+        </div>
     </section>
 </body>
 
