--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="/images/background.png" alt="이미지">
+    <img class="bg" src="../A9/images/background.png" alt="이미지">
 </body>
 
 </html>
