--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
+    <input type="checkbox" name="left1" id="left1" hidden>
+    <label for="left" class="first"><</label>
+    <input type="checkbox" name="right1" id="right1" hidden>
+    <label for="right" class="first">></label>
 </body>
 
 </html>
