--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -11,9 +11,17 @@
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
     <input type="checkbox" name="left1" id="left1" hidden>
-    <label for="left" class="first"><</label>
+    <label for="left1" class="first"><</label>
+    <input type="checkbox" name="left2" id="left2" hidden>
+    <label for="left2" class="second"><</label>
+    <input type="checkbox" name="left3" id="left3" hidden>
+    <label for="left3" class="third"><</label>
     <input type="checkbox" name="right1" id="right1" hidden>
-    <label for="right" class="first">></label>
+    <label for="right1" class="first">></label>
+    <input type="checkbox" name="right1" id="right1" hidden>
+    <label for="right2" class="second">></label>
+    <input type="checkbox" name="right1" id="right1" hidden>
+    <label for="right3" class="third">></label>
 </body>
 
 </html>
