--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
-    <input type="checkbox" name="left1" id="left1" hidden>
+    <input type="radio" name="left/right" id="left1" hidden>
     <label for="left1" class="first"><</label>
-    <input type="checkbox" name="right1" id="right1" hidden>
+    <input type="radio" name="left/right" id="right1" hidden>
     <label for="right1" class="first">></label>
 </body>
 
