modal-and-animation-test

--- a/2/code/modal-and-animation-test.html
+++ b/2/code/modal-and-animation-test.html
@@ -66,7 +66,8 @@
             padding: 10px 40px;
             border: 1px solid black;
             border-radius: 10px;
-            animation: myAnimation calc(1s/3/10/2500);
+            /*    animation: myAnimation calc(1s/3/10/2500); */
+            animation: myAnimation calc(1s/0.5);
             animation-iteration-count: infinite;
         }
 
@@ -255,7 +256,7 @@
 <body>
     <p class="catchmeifyoucan">못잡겠쥐?</p>
     <label for="modal">여기를 눌러 시작하세요</label>
-    <input type="checkbox" id="modal" class="modal-button" checked hidden>
+    <input type="checkbox" id="modal" class="modal-button" hidden>
     <div class="modal">
         <div class="modal-area">
             <p class="catchmeifyoucan">못잡겠쥐?</p>
