A9 and 초회 1.2 update

--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -12,8 +12,16 @@
     <img class="bg" src="../A9/images/background.png" alt="이미지">
     <input type="radio" name="left/right" id="left1" hidden>
     <label for="left1" class="first"><</label>
+    <input type="radio" name="left/right" id="left2" hidden>
+    <label for="left2" class="second"><</label>
+    <input type="radio" name="left/right" id="left3" hidden>
+    <label for="left3" class="third"><</label>
     <input type="radio" name="left/right" id="right1" hidden>
     <label for="right1" class="first">></label>
+    <input type="radio" name="left/right" id="right2" hidden>
+    <label for="right2" class="second">></label>
+    <input type="radio" name="left/right" id="right3" hidden>
+    <label for="right3" class="third">></label>
 </body>
 
 </html>
