슬라이드 버튼 흉내내기

--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -10,18 +10,16 @@
 
 <body>
     <img class="bg" src="../A9/images/background.png" alt="이미지">
-    <input type="radio" name="left/right" id="left1" hidden>
-    <label for="left1" class="first"><</label>
-    <input type="radio" name="left/right" id="left2" hidden>
-    <label for="left2" class="second"><</label>
-    <input type="radio" name="left/right" id="left3" hidden>
-    <label for="left3" class="third"><</label>
-    <input type="radio" name="left/right" id="right1" hidden>
-    <label for="right1" class="first">></label>
-    <input type="radio" name="left/right" id="right2" hidden>
-    <label for="right2" class="second">></label>
-    <input type="radio" name="left/right" id="right3" hidden>
-    <label for="right3" class="third">></label>
 </body>
+    <input type="radio" name="lr1" id="lr1">
+    <label for="lr1" class="right first red">></label>
+    <input type="radio" name="lr1" id="lr2" checked>
+    <label for="lr2" class="left second red"><</label>
+    <input type="radio" name="lr2" id="lr3">
+    <label for="lr3" class="right second gr">></label>
+    <input type="radio" name="lr2" id="lr4" checked>
+    <label for="lr4" class="left first gr"><</label>
+    <div class="left third blue"><</div>
+    <div class="right third blue">></div>
 
 </html>
