--- a/3/A9/index.html
+++ b/3/A9/index.html
@@ -21,5 +21,9 @@
     <label for="lr4" class="left first gr"><</label>
     <div class="left third blue"><</div>
     <div class="right third blue">></div>
-
+    <section class="gallery-contents">
+        <div class="gallery-content">
+            <div class="content"></div>
+        </div>
+    </section>
 </html>
